<resources>
    <string name="app_name">StudentAide</string>
    <string name="calendar_button">My Calendar</string>
    <string name="stats_button">My Stats</string>
    <string name="login_button">Sign in or Register</string>

    <string name="calendar">Calendar</string>
    <string name="eventButton">Add Event</string>
    <string name="eventTextBox">Event Name</string>

    <string name="title_activity_login">login</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="guest_login">Continue as Guest</string>
    <string name="log_out">Sign Out</string>
    <string name="educators">Educators</string>
    <string name="educator_ask">Are you an educator?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_open">Login and Sign up</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="courses_label">Courses</string>
    <string name="create_button">Create</string>
    <string name="create_label">Create a Course</string>
    <string name="courseTextBox">Course Name</string>
    <string name="educatorCourseButton">Creating an educator course?</string>
    <string name="course_name_hint">Course Name</string>
    <string name="institution_hint">Institution</string>
    <string name="create_educator_course">Creating an educator course?</string>
    <string name="quiz_switch">Quizzes?</string>
    <string name="join_course">Join Course</string>
    <string name="join_course_label">Join a Course</string>
    <string name="faculty">Faculty</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="study_label">Study</string>
    <string name="stats_label">My Stats</string>
    <string name="statistics_label">Statistics</string>
    <string name="minutes">Minutes</string>
    <string name="plan_session_label">Plan Session</string>
    <string name="label_set">Set</string>
    <string name="start_label">Start</string>
    <string name="plan_label">Plan</string>
    <string name="pause_label">Pause</string>
    <string name="fresh_timer">00:00</string>

    <string name="home_button">Home</string>
    <string name="study_button">Study</string>
    <string name="courses_button">Courses</string>

    <string name="retrieve_quiz">Quizzes</string>
    <string name="quiz_create_label">Create Quiz</string>
    <string name="quiz_name_hint">Quiz Name</string>
    <string name="set_quiz_name">Create Questions</string>
    <string name="quiz_create_open">Create Quiz</string>
    <string name="question_name">Question</string>
    <string name="answer_1">Option 1</string>
    <string name="answer_2">Option 2</string>
    <string name="answer_3">Option 3</string>
    <string name="answer_option">Answer (Ex. Option 1 = 1)</string>
    <string name="new_question">New Question</string>
    <string name="finish_quiz">Finish</string>

    <string name="do_quiz_label">Quiz __</string>
    <string name="due">Due:</string>
    <string name="question_label">Question #</string>
    <string name="question_name_label">Question</string>
    <string name="next_question">Next</string>

    <string name="open_quizzes">Do Quiz</string>
    <string name="answer_box">Answer</string>

</resources>
