<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegistrationEducator">

    <EditText
        android:id="@+id/facultyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/faculty"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#4C4C4C"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailInput2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailInput2"
        app:layout_constraintTop_toBottomOf="@+id/institutionInputRegister"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/institutionInputRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/institution_hint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#4C4C4C"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailInput2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailInput2"
        app:layout_constraintTop_toBottomOf="@+id/emailInput2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/phoneInputEducator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#4C4C4C"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailInput2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailInput2"
        app:layout_constraintTop_toBottomOf="@+id/facultyInput"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/firstNameInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#4C4C4C"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educatorRegisterLabel"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/lastNameInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#4C4C4C"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/firstNameInput2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstNameInput2"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#474343"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInputEducator"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordConfirmation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#474343"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="197dp"
        android:layout_height="37dp"
        android:layout_marginTop="27dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmation2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#4C4C4C"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lastNameInput2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastNameInput2"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/educatorRegisterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/educators"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>
