<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01003B"
    tools:context=".CoursesActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        app:itemIconTint="#01003B"
        app:itemTextColor="#01003B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseCreate"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation" />

    <TextView
        android:id="@+id/coursesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/courses_label"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/courseCreate"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonbackground"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="courseCreate"
        android:text="@string/create_label"
        android:textColor="#01003B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseJoin"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/courseJoin"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:background="@drawable/buttonbackground"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/join_course_label"
        android:textColor="#01003B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/courseDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1EDED"
        app:layout_constraintBottom_toTopOf="@+id/courseJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesLabel"
        app:layout_constraintVertical_bias="0.247" />

    <Button
        android:id="@+id/openQuizzes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_quiz"
        app:layout_constraintBottom_toTopOf="@+id/courseJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseDropdown"
        app:layout_constraintVertical_bias="0.329"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/quizDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/courseJoin"
        android:background="#F1EDED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseDropdown"
        app:layout_constraintVertical_bias="0.161" />


</androidx.constraintlayout.widget.ConstraintLayout>